# rolling-buffer-screen-capture

./: .gitignore  Cargo.toml  README.md  build.rs
src/: encode.rs  main.rs
